wip: partially add AddAuthor feature
