# 1_Object_Oriented/src/Application/Alexandria.Application/AuthorUseCases/AddAuthor/AddAuthorResponse.cs
@@ -1,0 +1,5 @@
+﻿using Alexandria.Domain.AuthorDomain;
+
+namespace Alexandria.Application.AuthorUseCases.AddAuthor;
+
+public sealed record AddAuthorResponse(Author Author) { }
