# 1_Object_Oriented/src/Presentation/Alexandria.WebApi/Endpoints/Authors/AddAuthor/AddAuthorEndpoint.cs
@@ -1,0 +1,38 @@
+﻿using Alexandria.Application.Abstractions.Repositories.Exceptions;
+using Alexandria.Application.AuthorUseCases.AddAuthor;
+using Microsoft.AspNetCore.Http.HttpResults;
+using Microsoft.AspNetCore.Mvc;
+
+namespace Alexandria.WebApi.Endpoints.Authors.AddAuthor;
+
+internal sealed class AddAuthorEndpoint : IAddAuthorEndpoint
+{
+    public void Map(IEndpointRouteBuilder endpointBuilder)
+    {
+        endpointBuilder
+            .MapPost("/", HandleAsync)
+            .WithSummary($"Add an Author.")
+            .WithName("AddAuthor");
+    }
+
+    public async Task<
+        Results<Created<AddAuthorResult>, Conflict<AuthorAlreadyExistsResult>>
+    > HandleAsync(
+        [FromServices] IAddAuthorService addAuthorService,
+        [FromBody] AddAuthorRequest authorRequest,
+        CancellationToken cancellationToken
+    )
+    {
+        var command = new AddAuthorCommand(authorRequest.ToAuthor());
+        try
+        {
+            var response = await addAuthorService.Handle(command, cancellationToken);
+            var result = new AddAuthorResult(response.Author);
+            return TypedResults.Created("", result);
+        }
+        catch (AuthorAlreadyExistsException)
+        {
+            return TypedResults.Conflict(new AuthorAlreadyExistsResult(authorRequest.ToAuthor()));
+        }
+    }
+}
