# 1_Object_Oriented/src/Presentation/Alexandria.WebApi/Endpoints/Authors/AddAuthor/AddAuthorRequest.cs
@@ -1,0 +1,22 @@
+﻿using Alexandria.Domain.AuthorDomain;
+
+namespace Alexandria.WebApi.Endpoints.Authors.AddAuthor;
+
+internal sealed record AddAuthorRequest(
+    string FirstName,
+    ICollection<string> MiddleNames,
+    string LastName,
+    DateTimeOffset BirthDate
+)
+{
+    internal Author ToAuthor()
+    {
+        // csharpier-ignore
+        return new Author(
+            0,
+            FirstName,
+            MiddleNames,
+            LastName,
+            BirthDate);
+    }
+}
