# 1_Object_Oriented/src/Presentation/Alexandria.WebApi/Endpoints/Authors/AddAuthor/AddAuthorResult.cs
@@ -1,0 +1,5 @@
+﻿using Alexandria.Domain.AuthorDomain;
+
+namespace Alexandria.WebApi.Endpoints.Authors.AddAuthor;
+
+internal sealed record AddAuthorResult(Author Author) { }
