# 1_Object_Oriented/src/Presentation/Alexandria.WebApi/Endpoints/Authors/AddAuthor/AuthorAlreadyExistsResult.cs
@@ -1,0 +1,8 @@
+﻿using Alexandria.Domain.AuthorDomain;
+
+namespace Alexandria.WebApi.Endpoints.Authors.AddAuthor;
+
+internal sealed record AuthorAlreadyExistsResult(Author Author)
+{
+    public string Message => $"The Author '{Author.Id}' already exists.";
+}
