# 1_Object_Oriented/src/Presentation/Alexandria.WebApi/Endpoints/Authors/AddAuthor/IAddAuthorEndpoint.cs
@@ -1,0 +1,15 @@
+﻿using Alexandria.Application.AuthorUseCases.AddAuthor;
+using Alexandria.WebApi.Endpoints.Accounts;
+using Alexandria.WebApi.Supports.EndpointMapper;
+using Microsoft.AspNetCore.Http.HttpResults;
+
+namespace Alexandria.WebApi.Endpoints.Authors.AddAuthor;
+
+internal interface IAddAuthorEndpoint : IGroupedEndpoint<AccountsGroup>
+{
+    Task<Results<Created<AddAuthorResult>, Conflict<AuthorAlreadyExistsResult>>> HandleAsync(
+        IAddAuthorService addAuthorService,
+        AddAuthorRequest request,
+        CancellationToken cancellationToken
+    );
+}
